--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-architect
+title: Patrick Bassal's GitHub Website
+description: I will be occasionally updating this website with public codes I have developed and other useful information related to geotechnical earthquake engineering.
